@@ -3,6 +3,7 @@ LIST OF CHANGES
 
 release 1.4
  - update DBIx binding to include second index sequence
+ - check that flowcell LIMs id and barcode map 1:1 (RT#481156)
 
 release 1.3
  - mapping for additional lims interface fields for sample data
